[package]
name = "arb-alloy-consensus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["alloc"]
alloc = []

[dependencies]
alloy-rlp = { version = "0.3", default-features = false }
alloy-primitives = { version = "1.3", default-features = false }
thiserror = "2"

[dev-dependencies]
proptest = "1.4.0"
